# rag-eval-kit

./: README.md  pyproject.toml
examples/: quickstart.py
src/rag_eval/: __init__.py  cli.py  core.py  metrics.py
